# swagger.json
@@ -1,17 +1,17 @@
 {
   "swagger": "2.0",
   "info": {
-    "title": "Express API for JSONPlaceholder",
+    "title": "Express API for Lesson 3",
     "version": "1.0.0",
     "description":
-    "This is a REST API application made with Express. It retrieves data from JSONPlaceholder.",
+    "This is a REST API application made with Express.",
     "license": {
       "name": "Licensed Under MIT",
       "url": "https://spdx.org/licenses/MIT.html"
     },
     "contact": {
       "name": "Kira Za",
-      "email": "kirka.zaz\"gmail.com"
+      "email": "kirka.zaz@gmail.com"
     }
   },
   "host": "localhost:5000",
@@ -117,7 +117,33 @@
         "tags": [
           "Users"
         ],
+        "parameters": [
+          {
+            "name": "user",
+            "in": "body",
+            "description": "User ID that we want to delete",
+            "schema": {
+              "type": "array"
+            }
+          }
+        ],
         "summary": "Delete one user",
+        "responses": {
+          "200": {
+            "description": "OK",
+            "schema": {
+              "type": "array"
+            }
+          }
+        }
+      }
+    },
+    "/api/tokens": {
+      "get": {
+        "tags": [
+          "Tokens"
+        ],
+        "summary": "Get all users in system",
         "responses": {
           "200": {
             "description": "OK",
